# aap-lv2-dragonfly-reverb

./: .gitignore  .gitmodules  Makefile  README.md  build.gradle  gradle.properties  import-dragonfly-reverb-deps.sh  settings.gradle
.github/workflows/: actions.yml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/androidaudioplugin/aap_dragonfly_reverb/: PluginTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: aap_metadata.xml
gradle/wrapper/: gradle-wrapper.properties
